# fuel-wasm-examples

./: Cargo.toml
.github/workflows/: ci.yaml
indexer-demo/: Cargo.toml
indexer-demo/src/: lib.rs
simple-wasm/: Cargo.toml
simple-wasm/src/: lib.rs
