[package]
name = "simple-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
fuels-core = { version = "0.3", package = "fuels-core" }
fuel-indexer = { git = "https://github.com/FuelLabs/fuel-core.git", package = "fuel-indexer", branch = "integrate-with-client" }
fuel-indexer-derive = { git = "https://github.com/FuelLabs/fuel-core.git", package = "fuel-indexer-derive", branch = "integrate-with-client" }
fuels-abigen-macro = { version = "0.3", package = "fuels-abigen-macro" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
